# SimpleBitTorrentDownloader

./: CMakeLists.txt  PeerConnection.cpp  PeerConnection.h  PeersRetriever.cpp  PeersRetriever.h  Piece.cpp  PieceManager.cpp  PieceManager.h  ReadMe.txt  TorrentClient.cpp  TorrentClient.h  TorrentFileParser.cpp  TorrentFileParser.h  connect.cpp  connect.h  main.cpp  torrent.yml  utils.cpp  utils.h
